--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -27,8 +27,16 @@ jobs:
         run: |
           pip install -r requirements.txt
 
-      - name: run pipeline
+      # - name: run pipeline
+      #   env:
+      #     CAPSTONE_TEST: ${{ secrets.CAPSTONE_TEST }}
+      #   run: |
+      #     dvc repro
+
+      - name: Run model tests
         env:
           CAPSTONE_TEST: ${{ secrets.CAPSTONE_TEST }}
         run: |
-          dvc repro
+          python -m unittest tests/test_model_validation.py
+      
+      
