--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -51,4 +51,11 @@ jobs:
         env:
           CAPSTONE_TEST: ${{ secrets.CAPSTONE_TEST }}
         run: |
-          python -m unittest tests/final_app_test.py
+          python -m unittest tests/test_flask_app.py
+
+      - name: Promote model to production
+        if: success()
+        env:
+          CAPSTONE_TEST: ${{ secrets.CAPSTONE_TEST }}
+        run: python scripts/promote_model.py
+    
