--- a/flask_app/requirements.txt
+++ b/flask_app/requirements.txt
@@ -1,7 +1,9 @@
-Flask==2.3.3
-mlflow==2.9.2
-pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.0
-prometheus_client==0.18.0
-waitress==2.1.2  # For production WSGI server
+Flask==3.0.0
+mlflow==3.8.1
+pandas==2.3.3
+numpy==2.2.6
+scikit-learn==1.7.2
+dagshub==0.3.20
+prometheus-client==0.19.0
+
+
