--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
+
+# local package
+-e .
+
+# external requirements
+# click
+# Sphinx
+# coverage
+# awscli
+# flake8
+# python-dotenv>=0.5.1
 ipykernel
 pandas
 numpy
@@ -18,4 +29,10 @@ python-multipart
 uvicorn
 jinja2
 imblearn
--e .
+dvc
+dvc[s3]
+mlflow
+dagshub
+prometheus_client
+waitress
+Flask
